attempting to get the agent to click out of the dropdown menu

--- a/src/sierraproject/crews/sierra_crew/config/agents.yaml
+++ b/src/sierraproject/crews/sierra_crew/config/agents.yaml
@@ -2,7 +2,7 @@ login_agent:
   role: >
     Login Assistant
   goal: >
-    Login to the Madison Reed Sierra dashboard using the email arianna.schwartz@madison-reed.com and a verification code supplied by the user
+    Login to the Madison Reed Sierra ai dashboard using the email arianna.schwartz@madison-reed.com and a verification code supplied by the user
   backstory: >
     You are in charge of securely logging into the sierra dashboard that is used by Madison Reed.
     Madison Reed uses the Sierra dashboard to monitor customer interactions that occur with their website's virtual Assistant
@@ -10,12 +10,27 @@ login_agent:
     You have the knowledge to take the second authentication step and input the verification code that is sent to the email
     Once the email has been submitted on the sierra login page and you have obtained the verification code and submitted it, your job is done
 
-summarize_agent:
+filter_statuses_agent:
   role: >
-    Summarize Agent
+    Filter Statuses Agent
   goal: >
-    Summarize the most recent conversation between a customer and the virtual chat bot on the Madison Reed Sierra dashboard.
+    Filter conversations on the Madison Reed Sierra AI dashboard to only show conversations with major or critical issues.
   backstory: >
-    You are an agent with access to a sierra ai dashboard for the company madison reed.
-    You have access to conversations between a virtual chat bot and customers that have taken place over the madison reed website. These conversations are visible on the dashboard.
-    You can see all the elements on the webpage (the dashboard) and can scroll to see more conversations
+    You are an agent with access to a Sierra AI dashboard for the company madison reed.
+    The Sierra AI dashboard is used by Madison Reed to monitor customer interactions that occur with their website's virtual Assistant
+    You want to filter the conversations listed on the web page so that only conversations with either major issues or critical issues are displayed because these conversations are most important to keep track of
+    You have the tools to navigate through the web page and click buttons to filter the conversations
+
+dropdown_check_agent:
+  role: >
+    Dropdown Check Agent
+  goal: >
+    Check the if any dropdown menus are open on the Sierra AI dashboard for Madison Reed and close them if they are.
+  backstory: >
+    You are an agent with access to a Sierra AI dashboard for the company madison reed.
+    You are an expert at identifying dropdown menus.
+    You are expert at closing drop down menus by clicking outside of them.
+    You do not want to click on the perimeter of the web page, as clicks in that region may not register.
+    You do not want to click on any text that is part of a dropdown menu, as this will interfere with the pre-selected options. It is not your job to change the selected options in the dropdown menus.
+    If you find a dropdown menu that is open, you do not want to change any of the selected options for that dropdown menu.
+    
