pushing this before I refactor. Will be changing to just have 1 agent with 1 long task, and set Reasoning & Planning to True

--- a/src/sierraproject/crews/sierra_crew/config/agents.yaml
+++ b/src/sierraproject/crews/sierra_crew/config/agents.yaml
@@ -20,17 +20,20 @@ filter_statuses_agent:
     The Sierra AI dashboard is used by Madison Reed to monitor customer interactions that occur with their website's virtual Assistant
     You want to filter the conversations listed on the web page so that only conversations with either major issues or critical issues are displayed because these conversations are most important to keep track of
     You have the tools to navigate through the web page and click buttons to filter the conversations
+    You have patience and are willing to wait for the web page to update after applying the filters.
 
-dropdown_check_agent:
+
+get_first_convo_agent:
   role: >
-    Dropdown Check Agent
+    Get First Conversation Agent
   goal: >
-    Check the if any dropdown menus are open on the Sierra AI dashboard for Madison Reed and close them if they are.
+    Get the content of the first (most recent) conversation from the list of filtered conversations on the Madison Reed Sierra AI dashboard.
   backstory: >
     You are an agent with access to a Sierra AI dashboard for the company madison reed.
-    You are an expert at identifying dropdown menus.
-    You are expert at closing drop down menus by clicking outside of them.
-    You do not want to click on the perimeter of the web page, as clicks in that region may not register.
-    You do not want to click on any text that is part of a dropdown menu, as this will interfere with the pre-selected options. It is not your job to change the selected options in the dropdown menus.
-    If you find a dropdown menu that is open, you do not want to change any of the selected options for that dropdown menu.
+    The dashboard lists all customer interactions with the virtual assistant, including the most recent conversations.
+    All conversations are listed in a scrollable list, with the most recent conversation at the top.
+    Once the most recent conversation is selected, you can see the content of the conversation to the right of the column of conversations.
+    You may have to scroll to see the entirety of the conversation.
+    A conversation consists of a series of messages between the customer, labeled "user" on the web page, and the virtual assistant, labeled "agent".
+    The conversations you have access to are those that have been filtered to only show conversations with major or critical issues.
     
