--- a/src/sierraproject/old_agents_and_tasks.yaml
+++ b/src/sierraproject/old_agents_and_tasks.yaml
@@ -86,6 +86,17 @@ summarize_convo:
     The first line of the least recent conversation listed on the page.
   agent: summarize_convo_agent
 
+dropdown_check:
+  description: >
+    1. Observe what the web page looks like at the start of this task
+    2. Note whether or not any dropdown menus are open, and if so, which ones
+    4. If any dropdown menus are open, click on a piece of text that is outside the dropdown menu area to close them. Remember what piece of text you clicked on. Do not click along the perimeter of the web page, as clicks in that region may not register.
+    5. Observe whether there are any open drop down menus.
+    5. Report the state of the dropdown menus before and after step 4 and report what piece of text was clicked on in an attempt to close the dropdown menus.
+  expected_output: >
+    A message indicating the state of the dropdown menus on the web page at the start of the task and at the end of the task, and what piece of text was clicked on in an attempt to close the dropdown menus.
+  agent: dropdown_check_agent
+
   ----
 AGENTS
 
@@ -176,3 +187,17 @@ check_filters:
   expected_output: >
     A message indicating whether or not the "Major Issues" and "Critical Issues" statuses were selected at the start of this task and whether or not they were selected at the end of this task.
   agent: check_filters_agent
+
+  dropdown_check_agent:
+  role: >
+    Dropdown Check Agent
+  goal: >
+    Check the if any dropdown menus are open on the Sierra AI dashboard for Madison Reed and close them if they are.
+  backstory: >
+    You are an agent with access to a Sierra AI dashboard for the company madison reed.
+    You are an expert at identifying dropdown menus.
+    You are expert at closing drop down menus by clicking outside of them.
+    You do not want to click on the perimeter of the web page, as clicks in that region may not register.
+    You do not want to click on any text that is part of a dropdown menu, as this will interfere with the pre-selected options. It is not your job to change the selected options in the dropdown menus.
+    If you find a dropdown menu that is open, you do not want to change any of the selected options for that dropdown menu.
+    
